--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-hotkeys": "^2.0.0",
+    "replicache-react": "^2.10.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
