--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "ignoreDeprecations": "5.0",
   },
   "include": [
     "next-env.d.ts",
